# coevo_pipeline

./: .gitignore  LICENSE  Makefile  README.md  Snakefile  config.yaml  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
coevo/: __init__.py  cli.py  config.py  logging_utils.py
coevo/analysis/: __init__.py  cooccurrence.py  phylogeny.py  statistics.py
coevo/blast/: __init__.py  blast_parser.py  blast_runner.py
coevo/io/: __init__.py  result_writer.py
coevo/sequences/: __init__.py  alignment.py  fasta_utils.py  motif_detection.py
coevo/taxonomy/: __init__.py  taxid_utils.py
docs/: index.md
docs/explanation/: 16s-context.md  caveats.md  cooccurrence.md  fisher-test.md
docs/how-to/: blast-db.md  blast-only.md  hpc-slurm.md  interpret-outputs.md  motif-config.md
docs/javascripts/: mathjax.js
docs/reference/: cli.md  config.md  output-files.md  snakemake.md
docs/tutorials/: end-to-end.md
examples/: example_config.yaml  protein_query.fasta  small_16s.fasta
path/to/: issue.md
tests/: __init__.py  test_blast_parser.py  test_cli.py  test_cooccurrence.py  test_fasta_utils.py  test_motif_detection.py  test_phylogeny.py
workflows/: rules_alignment.smk  rules_analysis.smk  rules_blast.smk
